force-app/main/default/objects/Temporal_Productos__c/Temporal_Productos__c.object-meta.xml
<CustomObject>
    <label>Temporal Producto</label>
    <nameField>
        <label>Temporal Producto</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Temporal Productos</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>