force-app/main/default/objects/Temporal_Productos__c/fields/CL_ano__c.field-meta.xml
<CustomField>
    <fullName>CL_ano__c</fullName>
    <label>CL_ano</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>