force-app/main/default/objects/Temporal_Productos__c/fields/Product__c.field-meta.xml
<CustomField>
    <fullName>Product__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Product</label>
    <referenceTo>Product2</referenceTo>
    <relationshipLabel>Temporal Productos</relationshipLabel>
    <relationshipName>Temporal_Productos</relationshipName>
    <type>Lookup</type>
</CustomField>