force-app/main/default/objects/Temporal_Productos__c/fields/QuantityUnitOfMeasure__c.field-meta.xml
<CustomField>
    <fullName>QuantityUnitOfMeasure__c</fullName>
    <label>QuantityUnitOfMeasure</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>