force-app/main/default/objects/Temporal_Productos__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>Family__c</columns>
    <columns>StockKeepingUnit__c</columns>
    <columns>IsActive__c</columns>
    <columns>QuantityUnitOfMeasure__c</columns>
    <columns>Name__c</columns>
    <columns>FechaCarga__c</columns>
    <columns>Estado__c</columns>
    <columns>Tipo_Error__c</columns>
    <columns>Product__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>Estado__c</field>
        <operation>equals</operation>
        <value>Pendiente</value>
    </filters>
    <label>All Records</label>
</ListView>